force-app/main/default/objects/Project__c/fields/Active_Version__c.field-meta.xml
<CustomField>
    <fullName>Active_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Version</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Project_Version__c.Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project_Version__c</referenceTo>
    <relationshipLabel>Project</relationshipLabel>
    <relationshipName>Project</relationshipName>
    <type>Lookup</type>
</CustomField>