force-app/main/default/objects/Project__c/fields/Approvers__c.field-meta.xml
<CustomField>
    <fullName>Approvers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approvers</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>