force-app/main/default/objects/Project__c/fields/Business_Case__c.field-meta.xml
<CustomField>
    <fullName>Business_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>shows that there is a business case associated to the project request</description>
    <label>Business Case</label>
    <referenceTo>Business_Case__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>