force-app/main/default/objects/Project__c/fields/Client_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Client_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Enabled</label>
    <type>Checkbox</type>
</CustomField>