force-app/main/default/objects/Project__c/fields/Delivery_Owner__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (Delivery Owner)</relationshipLabel>
    <relationshipName>ProjectsToDeliver</relationshipName>
    <type>Lookup</type>
</CustomField>