force-app/main/default/objects/Project__c/fields/Fixed_Cost_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Cost_Allocation__c</fullName>
    <label>Fixed Cost Allocation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>