force-app/main/default/objects/Project__c/fields/Gates__c.field-meta.xml
<CustomField>
    <fullName>Gates__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gates</label>
    <referenceTo>Gates__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>