force-app/main/default/objects/Project__c/fields/Project_Dependencies__c.field-meta.xml
<CustomField>
    <fullName>Project_Dependencies__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Any other related projects to the requested project?</description>
    <label>Project Dependencies</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>