force-app/main/default/objects/Project__c/fields/Proposed_start__c.field-meta.xml
<CustomField>
    <fullName>Proposed_start__c</fullName>
    <label>Proposed start</label>
    <required>true</required>
    <type>Date</type>
</CustomField>