force-app/main/default/objects/Project__c/fields/Reference_Object__c.field-meta.xml
<CustomField>
    <fullName>Reference_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Object</label>
    <referenceTo>Reference_Object__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>