force-app/main/default/objects/Project__c/fields/Return_on_Investment__c.field-meta.xml
<CustomField>
    <fullName>Return_on_Investment__c</fullName>
    <label>Return on Investment</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>