force-app/main/default/objects/Project__c/fields/Total_Fixed_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Fixed_Cost__c</fullName>
    <formula>Active_Version__r.Total_Fixed_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Fixed Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>