force-app/main/default/objects/Project__c/fields/Total_Material_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Total_Material_Forecast__c</fullName>
    <formula>Active_Version__r.Total_Material_Forecast__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Material Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>