force-app/main/default/objects/Project__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>