force-app/main/default/objects/Project__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <booleanFilter>(1 OR 2) AND 3 AND 4</booleanFilter>
    <columns>NAME</columns>
    <columns>CAPEX_Number__c</columns>
    <columns>Client__c</columns>
    <columns>Billing__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Billing__c</field>
        <operation>equals</operation>
        <value>Fixed Cost</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>10/21/2021 12:00 AM</value>
    </filters>
    <filters>
        <field>Client__c</field>
        <operation>equals</operation>
        <value>NSW Police</value>
    </filters>
    <filters>
        <field>Capital__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Copy of All</label>
</ListView>