force-app/main/default/objects/Project__c/listViews/New_list_View.listView-meta.xml
<ListView>
    <fullName>New_list_View</fullName>
    <columns>NAME</columns>
    <columns>Capital__c</columns>
    <columns>CAPEX_Number__c</columns>
    <columns>Client__c</columns>
    <columns>Billing__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Billing__c</field>
        <operation>equals</operation>
        <value>Fixed Cost</value>
    </filters>
    <label>FIxed cost list View</label>
</ListView>