force-app/main/default/objects/Project__c/listViews/Submitted_Projects.listView-meta.xml
<ListView>
    <fullName>Submitted_Projects</fullName>
    <columns>Project_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Delivery_Owner__c</columns>
    <columns>Executive_Sponsor__c</columns>
    <columns>Priority__c</columns>
    <columns>Parent_Project__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Release_Date__c</columns>
    <columns>Release_Qtr_and_Year__c</columns>
    <columns>Risk_assessment__c</columns>
    <columns>Program__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Submitted Projects</label>
</ListView>